# My-Painter

./: CMakeLists.txt  README.md
Notes/: environment.md  include_target.md  intro_qt.md  learn.md  new_file.md  use_cmake.md
include/: Test.h  mainwindow.h  newdialog.h
resources/: app_resources.qrc
src/: Test.cpp  main.cpp  mainwindow.cpp  newdialog.cpp
ui/: Test.ui  newdialog.ui
